--- a/experiment_configs/speedup_configs/resnet_cifar100_workers=32_batchsize=64.cfg
+++ b/experiment_configs/speedup_configs/resnet_cifar100_workers=32_batchsize=64.cfg
@@ -1,13 +1,13 @@
 Cfg({
-    "name" : "gradient_interference_resnet_workers=4_ratio",
+    "name" : "gradient_interference_resnet_workers=32_batchsize=64",
     "key_name": "MaxLamKeyPair",          # Necessary to ssh into created instances
 
     # Cluster topology
     "n_masters" : 1,                      # Should always be 1
-    "n_workers" : 3,
+    "n_workers" : 31,
     "n_ps" : 1,
     "n_evaluators" : 1,                   # Continually validates the model on the validation data
-    "num_replicas_to_aggregate" : "4",
+    "num_replicas_to_aggregate" : "32",
 
     "method" : "spot",
 
@@ -16,14 +16,14 @@ Cfg({
     "availability_zone" : "us-west-2c",
 
     # Machine type - instance type configuration.
-    "master_type" : "p2.xlarge",
-    "worker_type" : "p2.xlarge",
-    "ps_type" : "p2.xlarge",
-    "evaluator_type" : "p2.xlarge",
+    "master_type" : "g2.2xlarge",
+    "worker_type" : "g2.2xlarge",
+    "ps_type" : "g2.2xlarge",
+    "evaluator_type" : "g2.2xlarge",
     "image_id": "ami-f9fe7799", # GradientInterferenceGPU
 
     # Launch specifications
-    "spot_price" : "2",                 # Has to be a string
+    "spot_price" : "1",                 # Has to be a string
 
     # SSH configuration
     "ssh_username" : "ubuntu",            # For sshing. E.G: ssh ssh_username@hostname
@@ -59,8 +59,8 @@ Cfg({
     ],
 
     # Model configuration
-    "batch_size" : "64",
-    "initial_learning_rate" : ".1",
+    "batch_size" : "2",
+    "initial_learning_rate" : ".8",
     "learning_rate_decay_factor" : "1",
     "num_epochs_per_decay" : "350.0",
 
@@ -73,10 +73,10 @@ Cfg({
     # %(...)s - Inserts self referential string value.
     "train_commands" :
     [
-        "python resnet/src/resnet_distributed_train.py "
+        "python resnet/src/resnet_distributed_train.py " "--dataset=cifar100 "
         "--batch_size=%(batch_size)s "
         "--should_evaluate=true "
-        "--should_compute_R=true "
+        "--should_compute_R=false "
         "--initial_learning_rate=%(initial_learning_rate)s "
         "--learning_rate_decay_factor=%(learning_rate_decay_factor)s "
         "--num_epochs_per_decay=%(num_epochs_per_decay)s "
