--- a/experiment_configs/ratio_configs/resnet_cifar100_workers=8_ratio.cfg
+++ b/experiment_configs/ratio_configs/resnet_cifar100_workers=8_ratio.cfg
@@ -1,13 +1,13 @@
 Cfg({
-    "name" : "gradient_interference_resnet_cifar100_workers=32_batchsize=256",
+    "name" : "gradient_interference_resnet_cifar100_workers=4_ratio",
     "key_name": "MaxLamKeyPair",          # Necessary to ssh into created instances
 
     # Cluster topology
     "n_masters" : 1,                      # Should always be 1
-    "n_workers" : 31,
+    "n_workers" : 3,
     "n_ps" : 1,
     "n_evaluators" : 1,                   # Continually validates the model on the validation data
-    "num_replicas_to_aggregate" : "32",
+    "num_replicas_to_aggregate" : "4",
 
     "method" : "spot",
 
@@ -16,10 +16,10 @@ Cfg({
     "availability_zone" : "us-west-2c",
 
     # Machine type - instance type configuration.
-    "master_type" : "g2.2xlarge",
-    "worker_type" : "g2.2xlarge",
-    "ps_type" : "g2.2xlarge",
-    "evaluator_type" : "g2.2xlarge",
+    "master_type" : "p2.xlarge",
+    "worker_type" : "p2.xlarge",
+    "ps_type" : "p2.xlarge",
+    "evaluator_type" : "p2.xlarge",
     "image_id": "ami-f9fe7799", # GradientInterferenceGPU
 
     # Launch specifications
@@ -59,7 +59,7 @@ Cfg({
     ],
 
     # Model configuration
-    "batch_size" : "8",
+    "batch_size" : "64",
     "initial_learning_rate" : ".8",
     "learning_rate_decay_factor" : "1",
     "num_epochs_per_decay" : "350.0",
@@ -73,10 +73,11 @@ Cfg({
     # %(...)s - Inserts self referential string value.
     "train_commands" :
     [
-        "python resnet/src/resnet_distributed_train.py " "--dataset=cifar100 "
+        "python resnet/src/resnet_distributed_train.py "
+	"--dataset=cifar100 "
         "--batch_size=%(batch_size)s "
         "--should_evaluate=true "
-        "--should_compute_R=false "
+        "--should_compute_R=true "
         "--initial_learning_rate=%(initial_learning_rate)s "
         "--learning_rate_decay_factor=%(learning_rate_decay_factor)s "
         "--num_epochs_per_decay=%(num_epochs_per_decay)s "
