--- a/experiment_configs/accuracy_to_95_configs/resnet_configs/resnet_batchsize=128_nonreplicateddropout.cfg
+++ b/experiment_configs/accuracy_to_95_configs/resnet_configs/resnet_batchsize=128_nonreplicateddropout.cfg
@@ -59,7 +59,7 @@ Cfg({
 
     # Model configuration
     "batch_size" : "128",
-    "learning_rate" : ".00002",
+    "learning_rate" : "..01",
     "dataset_fraction" : "1",
 
     # Train command specifies how the ps/workers execute tensorflow.
