--- a/experiment_configs/accuracy_to_95_configs/resnet_configs/resnet_batchsize=128_replicated=4.cfg
+++ b/experiment_configs/accuracy_to_95_configs/resnet_configs/resnet_batchsize=128_replicated=4.cfg
@@ -59,7 +59,7 @@ Cfg({
 
     # Model configuration
     "batch_size" : "128",
-    "learning_rate" : ".00001",
+    "learning_rate" : "..008",
     "dataset_fraction" : "4",
 
     # Train command specifies how the ps/workers execute tensorflow.
