--- a/experiment_configs/accuracy_to_95_configs/resnet_configs/resnet_batchsize=64_replicated=8.cfg
+++ b/experiment_configs/accuracy_to_95_configs/resnet_configs/resnet_batchsize=64_replicated=8.cfg
@@ -59,7 +59,7 @@ Cfg({
 
     # Model configuration
     "batch_size" : "64",
-    "learning_rate" : .01",
+    "learning_rate" : ".01",
     "dataset_fraction" : "8",
 
     # Train command specifies how the ps/workers execute tensorflow.
